fixup spacing

--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -694,9 +694,9 @@
 
 /* Travel-Study Payment Button Workaround */
 .ggeWidget:not([class*="membership-forms"]) .ggeStripeContainer {
-  @apply su-rs-mb-2 su-pt-5 su-bg-white su-text-black su-rounded;
+  @apply su-rs-mb-2 su-rs-pt-2 su-bg-white su-text-black su-rounded;
 }
 
-.ggeWidget:not([class*="membership-forms"]) .ggeStripeContainer__lowerHr__outer {
+.ggeWidget:not([class*="membership-forms"]) .ggeStripeContainer__lowerHr {
   @apply su-p-0;
 }
